[package]
name = "bmdse"
description = "An interface for talking with a Black Magic Design Speed Editor using the HID API in written in Rust."
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["black-magic-design", "speed-editor", "hid"]
categories = ["api-bindings"]
repository = "https://github.com/BaukeWestendorp/bmdse"

[dependencies]
hidapi = "2.6.4"
